--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,7 +1,7 @@
 // Home Content
 
 .home {
-
+  
   @media @phone{
     max-width: 100%;
 
@@ -12,6 +12,11 @@
     .main-header{
       max-width: 100%;
       height: auto;
+      padding-top: 100px;
+
+      @media @phone{
+        padding-top: 0;
+      }// media main header
     }//main-header img
 
     h2 {
