--- a/less/mixins.less
+++ b/less/mixins.less
@@ -9,6 +9,11 @@
     font-size: @fs;
     padding: 2%;
     border-radius: 10px;
+
+    &:hover{
+        background-color: @river-bend;
+        color: @waterloo;
+    }
 }
 
 .mobilelayout(){
