--- a/less/navigation.less
+++ b/less/navigation.less
@@ -2,13 +2,20 @@
 nav {
 
     display: flex;
+    width: 100%;
     margin: 0 auto;
     flex-direction: column;
     justify-content: center;
     background-color: @nav-bg;
     font-family: @nav-font;
     border: 1px solid @nav-border;
+    z-index: 999;
+    position: fixed;
 
+    @media @phone{
+        z-index: 1;
+        position: static;
+    }
 
     .title{
         
